Fix visibility issues

--- a/src/App.css
+++ b/src/App.css
@@ -54,9 +54,9 @@
 }
 
 .animate-marquee {
-  animation: marquee 25s linear infinite;
+  animation: marquee 15s linear infinite;
 }
 
 .animate-marquee-reverse {
-  animation: marquee-reverse 25s linear infinite;
+  animation: marquee-reverse 15s linear infinite;
 }
